# ports-and-adapters

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  deno.jsonc  eslint.config.js  package-lock.json  package.json  ports-and-adapters.cabal  tsconfig.json
src/: App.hs  Main.hs  config.ts  main.ts
src/Adapters/: Memory.hs
src/Domain/: Users.hs
src/UseCases/: FindUserById.hs  RegisterUser.hs
src/adapters/aws/ses/: email-mailer.ts
src/adapters/console/: logger.ts
src/adapters/express/: app.ts  register-users.ts
src/adapters/http/: application.ts  utils.ts
src/adapters/http/users/: codec.ts  router.ts
src/adapters/inMemory/: UserRepository.ts
src/adapters/map/: users-repository.ts
src/domain/: DomainError.ts  email.ts  logger.ts  users.ts
src/domain/__tests__/: data.ts  test-env.ts  users.spec.ts
src/domain/users/: UserRepository.ts  types.ts
src/useCases/: FindUserUseCase.ts  RegisterUserUseCase.ts
test/: MainSpec.hs  Spec.hs
