name:                ports-and-adapters
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ports-and-adapters#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ports-and-adapters
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       App
                     , Adapters.Memory
                     , UseCases.FindUserById
                     , UseCases.RegisterUser
                     , Domain.Users
  default-extensions:  GeneralizedNewtypeDeriving
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , hspec
